--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.7.0",
+    "@types/node": "^20.14.11",
     "eslint": "9.x",
     "globals": "^15.8.0",
     "prettier": "^3.3.3",
-    "typescript": "^5.4.5",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "tslib": "^2.6.3",
+    "typescript": "^5.5.3",
     "typescript-eslint": "^7.16.1",
     "vite": "^5.2.10"
   }
