--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -6,7 +6,7 @@
     "noEmit": false,
     "isolatedModules": false,
     "outDir": "./types",
-    "rootDir": "./lib/src",
+    "rootDir": "./lib",
   },
   "include": [
     "./lib"
