build(tsconfig): 更新 TypeScript 配置文件

--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    /* Type Declaration Output */
     "declaration": true,
     "emitDeclarationOnly": true,
     "noEmit": false,
