--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,17 +9,18 @@
       "DOM.Iterable"
     ],
     "skipLibCheck": true,
-    /* Bundler mode */
+    /* Development mode */
     "moduleResolution": "Bundler",
     "noEmit": true,
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    /* Linting */
+    /* Type Checking */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    /* Path Aliases */
     "baseUrl": "./",
     "paths": {
       "@components": [
