feat(info): 重构信息组件绘制方法

--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "typescript-eslint": "^7.16.1",
     "vite": "^5.2.10",
     "vite-plugin-dts": "^4.1.1"
+  },
+  "dependencies": {
+    "@fontsource/bravura-text": "^5.2.5"
   }
 }
