--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
     "vite-plugin-dts": "^4.1.1"
   },
   "dependencies": {
-    "@fontsource/bravura-text": "^5.2.5"
+    "@fontsource/bravura": "^5.2.5"
   }
 }
