--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-notation",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "type": "module",
   "author": {
     "name": "Encaik",
@@ -26,7 +26,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "publish:pkg": "npm run build && npm publish"
   },
   "devDependencies": {
     "@eslint/js": "^9.7.0",
