chore: 更新构建配置以支持示例项目
- 在.gitignore中添加dist-examples目录
- 在package.json中添加build:examples脚本
- 修改vite.config.ts以支持示例项目的构建输出目录

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "publish:pkg": "npm run build && npm publish"
+    "build:examples": "vite build --mode examples"
   },
   "devDependencies": {
     "@eslint/js": "^9.7.0",
