--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@eslint/js": "^9.7.0",
     "@types/node": "^20.14.11",
+    "@vitejs/plugin-vue": "^5.2.3",
     "eslint": "9.x",
     "globals": "^15.8.0",
     "prettier": "^3.3.3",
@@ -40,7 +41,8 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^7.16.1",
     "vite": "^5.2.10",
-    "vite-plugin-dts": "^4.1.1"
+    "vite-plugin-dts": "^4.1.1",
+    "vue": "^3.5.13"
   },
   "dependencies": {
     "@fontsource/bravura": "^5.2.5"
