--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@eslint/js": "^9.7.0",
     "@types/node": "^20.14.11",
+    "@vercel/analytics": "^1.5.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "eslint": "9.x",
     "globals": "^15.8.0",
