feat: 添加层支持和调整组件初始化逻辑
在tsconfig和vite配置中添加了对新层的支持，更新了App.vue中的调试模式，并优化了SimpleNotation类的初始化逻辑，确保内容节点和边框层的正确创建。同时，调整了多个组件的边框绘制逻辑以适应新的层结构。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,9 @@
       "@core": [
         "lib/src/core"
       ],
+      "@layers": [
+        "lib/src/layers"
+      ],
       "@types": [
         "lib/src/types"
       ],
