feat: 增强PanelOperate组件，添加音符播放和停止功能
在PanelOperate组件中新增播放和停止按钮，集成Tone.js库以实现音符播放功能。同时，优化了按钮布局样式，提升用户交互体验。更新了相关的音符数据处理逻辑。

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "globals": "^15.8.0",
     "prettier": "^3.3.3",
     "rollup-plugin-typescript2": "^0.36.0",
+    "tone": "^15.1.22",
     "tslib": "^2.6.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^7.16.1",
