chore: 添加homepage字段至package.json
在package.json中新增homepage字段，指定项目的主页链接，以便于用户访问和了解项目。此更改有助于提升项目的可见性和用户体验。

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type": "git",
     "url": "https://github.com/Encaik/simple-notation"
   },
+  "homepage": "https://simple-notation.vercel.app/",
   "description": "动态简谱渲染库 —— 仅需文本输入，即可在您的网页上生成优美的简谱，专为现代Web设计。",
   "files": [
     "dist",
