chore: 更新release.yml以支持手动触发工作流
在release.yml中添加了workflow_dispatch选项，允许手动触发发布工作流。同时，清理了发布信息的格式，确保更好的可读性。这一更改提升了工作流的灵活性和可操作性。

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,6 @@
 name: Release
 
+workflow_dispatch: # 允许手动触发工作流
 on:
   push:
     tags:
@@ -40,7 +41,7 @@ jobs:
           name: Release ${{ github.ref_name }}
           body: |
             Changes in this Release
-            
+
             ```shell
             $ git log --pretty=format:"%s" HEAD~1..HEAD
             ```
