--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.7.0",
+    "@tailwindcss/vite": "^4.1.7",
     "@types/node": "^20.14.11",
     "@vercel/analytics": "^1.5.0",
     "@vitejs/plugin-vue": "^5.2.3",
@@ -39,6 +40,7 @@
     "globals": "^15.8.0",
     "prettier": "^3.3.3",
     "rollup-plugin-typescript2": "^0.36.0",
+    "tailwindcss": "^4.1.7",
     "tone": "^15.1.22",
     "tslib": "^2.6.3",
     "typescript": "^5.5.3",
