--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "eslint": "9.x",
     "globals": "^15.8.0",
+    "pinia": "^3.0.2",
     "prettier": "^3.3.3",
     "rollup-plugin-typescript2": "^0.36.0",
     "tailwindcss": "^4.1.7",
