--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "dev": "vite",
     "build": "vite build",
     "build:examples": "vite build --mode examples",
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@eslint/js": "^9.7.0",
@@ -37,6 +38,7 @@
     "@types/node": "^20.14.11",
     "@vercel/analytics": "^1.5.0",
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vitest/coverage-v8": "3.1.4",
     "eslint": "9.x",
     "globals": "^15.8.0",
     "jsdom": "^26.1.0",
