chore: 添加@codecov/vite-plugin以支持代码覆盖率分析
- 在package.json中添加@codecov/vite-plugin作为开发依赖
- 在vite.config.ts中配置codecovVitePlugin以启用代码覆盖率上传功能
- 更新yarn.lock以反映新依赖项的添加

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@codecov/vite-plugin": "^1.9.1",
     "@eslint/js": "^9.7.0",
     "@tailwindcss/vite": "^4.1.7",
     "@types/node": "^20.14.11",
