chore: 更新build:examples脚本以清空输出目录
- 在package.json中修改build:examples脚本，添加--emptyOutDir选项以确保构建时清空输出目录

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:examples": "vite build --mode examples",
+    "build:examples": "vite build --mode examples --emptyOutDir",
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
