feat(App.vue, PanelOperate): 添加MIDI文件支持和文件导入功能
- 在App.vue中引入midi-file库以支持MIDI文件解析。
- 更新handleImportFile方法，支持导入MIDI文件并解析为SimpleNotation模板格式。
- 修改PanelOperate组件，允许用户选择MIDI文件进行导入，增强文件处理能力。
- 添加相应的注释，符合jsdoc规范，提升代码可读性和维护性。

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "9.x",
     "globals": "^15.8.0",
     "jsdom": "^26.1.0",
+    "midi-file": "^1.2.4",
     "pinia": "^3.0.2",
     "prettier": "^3.3.3",
     "rollup-plugin-typescript2": "^0.36.0",
