feat(workflow): 在测试工作流中新增代码覆盖率收集步骤
- 在GitHub Actions的test.yml文件中添加收集代码覆盖率的步骤，使用yarn run coverage命令。
- 确保测试结果的完整性，提升代码质量监控能力。

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Run tests
         run: yarn run test
 
+      - name: Collect coverage
+        run: yarn run coverage
+
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v5
         with:
