--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
   },
   "devDependencies": {
     "@codecov/vite-plugin": "^1.9.1",
+    "@codemirror/basic-setup": "^0.20.0",
     "@eslint/js": "^9.7.0",
     "@tailwindcss/vite": "^4.1.7",
     "@types/node": "^20.14.11",
     "@vercel/analytics": "^1.5.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitest/coverage-v8": "3.1.4",
+    "codemirror": "^6.0.1",
     "eslint": "9.x",
     "globals": "^15.8.0",
     "jsdom": "^26.1.0",
