--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@codemirror/basic-setup": "^0.20.0",
     "@eslint/js": "^9.7.0",
     "@tailwindcss/vite": "^4.1.7",
+    "@tonejs/midi": "^2.0.28",
     "@types/node": "^20.14.11",
     "@vercel/analytics": "^1.5.0",
     "@vitejs/plugin-vue": "^5.2.3",
@@ -45,7 +46,6 @@
     "eslint": "9.x",
     "globals": "^15.8.0",
     "jsdom": "^26.1.0",
-    "midi-file": "^1.2.4",
     "pinia": "^3.0.2",
     "prettier": "^3.3.3",
     "rollup-plugin-typescript2": "^0.36.0",
