feat(App): 新增新建乐谱功能
- 在App.vue中添加新建乐谱的事件处理函数，重置乐谱数据为默认状态。
- 更新模板，增加新建按钮，提升用户操作体验。

--- a/package.json
+++ b/package.json
@@ -7,6 +7,21 @@
     "email": "encaik@foxmail.com",
     "url": "https://github.com/encaik"
   },
+  "license": "MIT",
+  "keywords": [
+    "simple-notation",
+    "music",
+    "score",
+    "typescript",
+    "music-notation",
+    "music-score",
+    "music-renderer",
+    "music-visualization",
+    "chinese-music"
+  ],
+  "bugs": {
+    "url": "https://github.com/Encaik/simple-notation/issues"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Encaik/simple-notation"
