feat(editor): 添加歌词和简谱语法高亮功能
- 在LyricEditor和ScoreEditor组件中引入@lezer/highlight库，增加歌词和简谱的语法高亮支持。
- 定义了歌词和简谱的高亮样式及语法规则，提升编辑器的可读性和用户体验。
- 更新了编辑器的样式，优化了文本显示效果，增强了用户交互体验。

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@codecov/vite-plugin": "^1.9.1",
     "@codemirror/basic-setup": "^0.20.0",
     "@eslint/js": "^9.7.0",
+    "@lezer/highlight": "^1.2.1",
     "@tailwindcss/vite": "^4.1.7",
     "@tonejs/midi": "^2.0.28",
     "@types/node": "^20.14.11",
