feat(dependencies): 添加pitchy库及其依赖fft.js
- 在package.json中新增了pitchy库的依赖，版本为4.1.0。
- 更新yarn.lock以包含pitchy及其依赖fft.js的相关信息。
- 增强代码注释，符合jsdoc规范，提升可读性和维护性。

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "globals": "^15.8.0",
     "jsdom": "^26.1.0",
     "pinia": "^3.0.2",
+    "pitchy": "^4.1.0",
     "prettier": "^3.3.3",
     "rollup-plugin-typescript2": "^0.36.0",
     "tailwindcss": "^4.1.7",
