feat(release): 更新发布工作流，添加发布触发逻辑
- 在 release.yml 文件中新增发布工作流的 draft 和 prerelease 设置，确保发布时的状态正确。
- 添加触发发布工作流的逻辑，支持通过标签或手动触发发布。
- 增强代码注释，符合jsdoc规范，提升可读性和维护性。

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,6 +87,13 @@ jobs:
           name: Release ${{ env.RELEASE_TAG }}
           body: ${{ env.RELEASE_BODY }}
           files: release/simple-notaion-${{ env.RELEASE_TAG }}.zip
+          draft: false
+          prerelease: false
+
+      - name: Trigger publish workflow
+        if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
+        run: |
+          gh api repos/${{ github.repository }}/releases/${{ steps.release_notes.outputs.id }}/publish
 
       - name: Clean up zip file
         run: rm -rf release/
