feat(workflows): 更新工作流配置，增强发布和测试逻辑
- 在 release.yml 文件中添加 GH_TOKEN 环境变量，确保发布操作的权限正确。
- 在 test.yml 文件中更新触发条件，支持所有分支的推送，同时忽略所有标签的推送。
- 增强代码注释，符合jsdoc规范，提升可读性和维护性。

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,6 +94,8 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
         run: |
           gh api repos/${{ github.repository }}/releases/${{ steps.release_notes.outputs.id }}/publish
+        env:
+          GH_TOKEN: ${{ github.token }}
 
       - name: Clean up zip file
         run: rm -rf release/
