--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,7 +93,7 @@ jobs:
       - name: Trigger publish workflow
         if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
         run: |
-          gh api repos/${{ github.repository }}/releases/${{ steps.release_notes.outputs.id }}/publish
+          gh api repos/${{ github.repository }}/releases/${{ steps.release_notes.outputs.id }}publish
         env:
           GH_TOKEN: ${{ github.token }}
 
