feat(workflows): 增强发布工作流触发逻辑
- 在 publish.yml 文件中添加 workflow_dispatch 触发选项，允许手动触发发布工作流。
- 在 release.yml 文件中新增逻辑，确保在创建或发布时显式触发发布工作流。
- 增强代码注释，符合jsdoc规范，提升可读性和维护性。

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,7 @@ permissions:
 on:
   release:
     types: [published]
+  workflow_dispatch: # 允许通过 workflow_dispatch 触发
 
 jobs:
   build-and-publish:
