--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,5 +90,12 @@ jobs:
           draft: false
           prerelease: false
 
+      - name: Explicitly trigger publish workflow
+        if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' # Only trigger if release was created/published
+        run: |
+          gh workflow run publish.yml
+        env:
+          GH_TOKEN: ${{ github.token }}
+
       - name: Clean up zip file
         run: rm -rf release/
