--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,7 @@ name: Release
 
 permissions:
   contents: write
+  actions: write # 增加 actions 写入权限以触发其他工作流
 
 on:
   workflow_dispatch: # 允许手动触发工作流
