refactor(player): 移除不必要的连音线时值计算方法
- 删除了 `getTieDuration` 方法，该方法用于计算连音线合并后的总时值，因其在当前实现中不再使用。
- 增强代码注释，符合jsdoc规范，提升可读性和维护性。

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build project
         run: yarn build
 
-      - name: Set release tag
+      - name: Set release tag and version number
         run: |
           # 获取原始 tag 名称 (e.g., v1.0.21)
           RELEASE_TAG=$(git describe --tags --abbrev=0)
