--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@codecov/vite-plugin": "^1.9.1",
     "@codemirror/basic-setup": "^0.20.0",
     "@eslint/js": "^9.7.0",
+    "@fontsource/bravura": "^5.2.5",
     "@lezer/highlight": "^1.2.1",
     "@tailwindcss/vite": "^4.1.7",
     "@tonejs/midi": "^2.0.28",
@@ -69,14 +70,12 @@
     "tailwindcss": "^4.1.7",
     "tone": "^15.1.22",
     "tslib": "^2.6.3",
-    "typescript": "^5.5.3",
+    "typescript": "^5.4.2",
     "typescript-eslint": "^7.16.1",
     "vite": "^5.2.10",
     "vite-plugin-dts": "^4.1.1",
     "vitest": "^3.1.4",
     "vue": "^3.5.13"
   },
-  "dependencies": {
-    "@fontsource/bravura": "^5.2.5"
-  }
+  "dependencies": {}
 }
