feat(print): 增强乐谱打印功能，支持将乐谱保存为PDF
- 在 PanelOperate 组件中实现打印功能，使用 html2canvas 和 jsPDF 库将乐谱内容转换为PDF文件。
- 添加分页处理逻辑，确保乐谱内容在PDF中正确分割。
- 更新按钮文本和加载状态，提升用户体验。
- 增强代码注释，符合jsdoc规范，提升可维护性。
- 在 score.ts 中添加分页处理，确保乐谱在A4纸上正确显示。

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@lezer/highlight": "^1.2.1",
     "@tailwindcss/vite": "^4.1.7",
     "@tonejs/midi": "^2.0.28",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^20.14.11",
     "@vercel/analytics": "^1.5.0",
     "@vitejs/plugin-vue": "^5.2.3",
@@ -62,7 +63,9 @@
     "codemirror": "^6.0.1",
     "eslint": "9.x",
     "globals": "^15.8.0",
+    "html2canvas": "^1.4.1",
     "jsdom": "^26.1.0",
+    "jspdf": "^3.0.1",
     "pinia": "^3.0.2",
     "pitchy": "^4.1.0",
     "prettier": "^3.3.3",
