--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitest/coverage-v8": "3.1.4",
+    "@zumer/snapdom": "^1.2.5",
     "codemirror": "^6.0.1",
     "eslint": "9.x",
     "globals": "^15.8.0",
