--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,12 +76,12 @@ jobs:
           echo "EOF" >> $GITHUB_ENV
 
       - name: Check dist directory
-        run: ls -la dist/
+        run: ls -la packages/simple-notation/dist/
 
       - name: Archive dist folder
         run: |
           mkdir -p release
-          cd dist && zip -r ../release/simple-notaion-${{ env.VERSION_NUMBER }}.zip . && cd .. # 使用不带 v 的版本号命名 zip 文件
+          cd packages/simple-notation/dist/ && zip -r ../../../release/simple-notaion-${{ env.VERSION_NUMBER }}.zip . && cd ../../../ # 使用不带 v 的版本号命名 zip 文件
 
       - name: Upload artifact to GitHub Release
         uses: softprops/action-gh-release@v1
