feat(package.json): 增加部署命令以支持 web 项目的构建和发布
- 在 package.json 中新增 "deploy:web" 命令，整合 lib 和 web 的构建流程，简化部署步骤。

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:lib": "pnpm --filter simple-notation build",
     "preview:web": "pnpm --filter web preview",
     "test:lib": "pnpm --filter simple-notation test",
-    "coverage:lib": "pnpm --filter simple-notation coverage"
+    "coverage:lib": "pnpm --filter simple-notation coverage",
+    "deploy:web": "pnpm run build:lib && pnpm run build:web"
   },
   "devDependencies": {
     "eslint": "^9.22.0",
