--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
-    "prettier": "3.5.3"
+    "prettier": "3.5.3",
+    "typescript": "^5.8.3"
   },
   "workspaces": [
     "packages/*"
