--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Build project
         run: pnpm build:lib
 
+      - name: Into package directory
+        run: cd packages/simple-notation
+
       - name: Publish to npmjs
         run: npm publish --provenance --access public
         env:
