feat(GitHub Actions): 优化发布工作流，合并进入包目录的步骤
- 将进入 packages/simple-notation 目录的步骤合并到 npm 发布命令中，简化工作流配置，确保发布过程中的路径正确性。

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,10 +31,9 @@ jobs:
       - name: Build project
         run: pnpm build:lib
 
-      - name: Into package directory
-        run: cd packages/simple-notation
-
       - name: Publish to npmjs
-        run: npm publish --provenance --access public
+        run: |
+          cd packages/simple-notation
+          npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
