feat(组件优化): 将多个面板组件的结构从 div 转换为 Card 组件，提升代码复用性和可维护性。同时，更新 TypeScript 配置，新增对 ES2021 和 DOM 的支持，增强项目的兼容性和功能性。

--- a/packages/web/tsconfig.node.json
+++ b/packages/web/tsconfig.node.json
@@ -9,11 +9,17 @@
     "eslint.config.*"
   ],
   "compilerOptions": {
+    "lib": [
+      "ES2021",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "types": ["node"]
+    "types": [
+      "node"
+    ]
   }
 }
