--- a/packages/web/tsconfig.app.json
+++ b/packages/web/tsconfig.app.json
@@ -9,6 +9,11 @@
     "src/**/__tests__/*"
   ],
   "compilerOptions": {
+    "lib": [
+      "ES2021",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "paths": {
       "@/*": [
