--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -28,7 +28,8 @@
     "simple-notation": "workspace:*",
     "tailwindcss": "^4.1.10",
     "tone": "^15.1.22",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.10",
