chore(scripts): 添加 docs 服务脚本
- 在 package.json 中新增 dev:docs 脚本，用于启动 docs 服务
- 该修改便于开发者启动和预览文档站点

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "dev:web": "pnpm --filter web dev",
+    "dev:docs": "pnpm --filter docs dev",
     "build:web": "pnpm --filter web build-only",
     "build:lib": "pnpm --filter simple-notation build",
     "preview:web": "pnpm --filter web preview",
