feat(core): 引入实例级事件总线支持并优化模块结构
- SNEvent 类支持通过 new 创建实例，实现每个 SimpleNotation 实例拥有独立事件总线
- 保留 SNEvent.getInstance() 用于获取全局单例事件总线，保证向后兼容
- 调整部分 parser 和 loader 模块路径，将其移至 data 目录下以明确职责划分
- 更新相关组件引入路径及类型引用位置，统一使用相对路径访问 model 类型
- 在 SNScore 构造函数中增加 eventBus 参数，支持传入事件总线实例
- 移除 package.json 中的 main/module/types 字段，改用 exports 字段统一导出入口
- 添加 sideEffects 字段声明包无副作用，利于构建工具进行 tree-shaking 优化

--- a/packages/simple-notation/package.json
+++ b/packages/simple-notation/package.json
@@ -31,14 +31,12 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/simple-notation.umd.cjs",
-  "module": "./dist/simple-notation.js",
-  "types": "./dist/index.d.ts",
   "exports": {
     "types": "./dist/index.d.ts",
     "import": "./dist/simple-notation.js",
     "require": "./dist/simple-notation.umd.cjs"
   },
+  "sideEffects": false,
   "scripts": {
     "build": "vite build",
     "test": "vitest",
