--- a/packages/simple-notation/tsconfig.json
+++ b/packages/simple-notation/tsconfig.json
@@ -32,6 +32,9 @@
       "@config": [
         "src/config"
       ],
+      "@core": [
+        "src/core"
+      ],
       "@core/*": [
         "src/core/*"
       ],
