feat(render): 添加渲染管理器和路径别名支持
- 在 SimpleNotation 中引入 RenderManager，增强渲染功能，支持不同渲染器类型。
- 更新 tsconfig.json 和 vite.config.ts，新增 @render 路径别名，方便模块导入。
- 删除不再使用的 sn.spec.ts 测试文件，简化项目结构。
- 更新 SNLayoutBuilder 和相关配置，优化布局计算逻辑，支持自适应容器大小。

该变更提升了渲染能力和模块化管理，增强了代码的可维护性和可扩展性。

--- a/packages/simple-notation/tsconfig.json
+++ b/packages/simple-notation/tsconfig.json
@@ -55,6 +55,9 @@
       ],
       "@layout/*": [
         "src/layout/*"
+      ],
+      "@render/*": [
+        "src/render/*"
       ]
     }
   },
